@@ -24,9 +24,14 @@ def str_to_datetime_processor_factory(regexp, type_):
         if value is None:
             return None
         else:
-            m = rmatch(value)
+            try:
+                m = rmatch(value)
+            except TypeError:
+                raise ValueError("Couldn't parse %s string '%r' "
+                                "- value is not a string." % (type_.__name__ , value))
             if m is None:
-                raise ValueError("Couldn't parse %s string." % type_.__name__)
+                raise ValueError("Couldn't parse %s string: "
+                                "'%s'" % (type_.__name__ , value))
             return type_(*map(int, m.groups(0)))
     return process
 
@@ -36,29 +41,7 @@ def boolean_to_int(value):
     else:
         return int(value)
 
-try:
-    from sqlalchemy.cprocessors import UnicodeResultProcessor, \
-                                       DecimalResultProcessor, \
-                                       to_float, to_str, int_to_boolean, \
-                                       str_to_datetime, str_to_time, \
-                                       str_to_date
-
-    def to_unicode_processor_factory(encoding, errors=None):
-        # this is cumbersome but it would be even more so on the C side
-        if errors is not None:
-            return UnicodeResultProcessor(encoding, errors).process
-        else:
-            return UnicodeResultProcessor(encoding).process
-
-    def to_decimal_processor_factory(target_class, scale=10):
-        # Note that the scale argument is not taken into account for integer
-        # values in the C implementation while it is in the Python one. 
-        # For example, the Python implementation might return 
-        # Decimal('5.00000') whereas the C implementation will 
-        # return Decimal('5'). These are equivalent of course.
-        return DecimalResultProcessor(target_class, "%%.%df" % scale).process
-
-except ImportError:
+def py_fallback():
     def to_unicode_processor_factory(encoding, errors=None):
         decoder = codecs.getdecoder(encoding)
 
@@ -109,4 +92,30 @@ except ImportError:
                                                         datetime.datetime)
     str_to_time = str_to_datetime_processor_factory(TIME_RE, datetime.time)
     str_to_date = str_to_datetime_processor_factory(DATE_RE, datetime.date)
+    return locals()
+
+try:
+    from sqlalchemy.cprocessors import UnicodeResultProcessor, \
+                                       DecimalResultProcessor, \
+                                       to_float, to_str, int_to_boolean, \
+                                       str_to_datetime, str_to_time, \
+                                       str_to_date
+
+    def to_unicode_processor_factory(encoding, errors=None):
+        # this is cumbersome but it would be even more so on the C side
+        if errors is not None:
+            return UnicodeResultProcessor(encoding, errors).process
+        else:
+            return UnicodeResultProcessor(encoding).process
+
+    def to_decimal_processor_factory(target_class, scale=10):
+        # Note that the scale argument is not taken into account for integer
+        # values in the C implementation while it is in the Python one. 
+        # For example, the Python implementation might return 
+        # Decimal('5.00000') whereas the C implementation will 
+        # return Decimal('5'). These are equivalent of course.
+        return DecimalResultProcessor(target_class, "%%.%df" % scale).process
+
+except ImportError:
+    globals().update(py_fallback())
 
